--- a/public/style1/style.css
+++ b/public/style1/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
 }
-body{background:white;
+body{background:darkslategray;
 
 }
 p, h3, h4{
@@ -10,7 +10,7 @@ p, h3, h4{
 }
 header > div{
     padding-left: 7rem;
-    background-color: gray;
+    background-color: teal;
     height: 30%;
     display: flex;
     flex-direction: row;
@@ -18,60 +18,54 @@ header > div{
 }
 .content {
     margin: 2rem;
-    display: grid;
-    grid-template-columns:50% 50%;
-    column-gap: 10px;
-    row-gap: 20px
+    display: flex;
+    flex-direction: column;
 }
 #contact{
+    margin-top: 2rem;
     color: white;
     background-color: black;
-    width: 33%;
-    position: absolute;
-    top: 20px;
-    right: 0;
+    width: 40%;
 }
 .contact{
-
     
     display: flex;
     flex-direction: row;
-    
-    
-    
 }
-.contact-type{
-    width: 30%;
-    background-color: red;
-}
+
 
 .contact-value, a{
     text-decoration: none;
-    color: red;
-    background-color: black;
+    color: black;
+    background-color: teal;
 } 
 
 
 #contact h3{
-    display: none;
+    background-color: teal;
+    border-bottom: 1px solid gray;
 }
 
-h3::before{
-content:" ";
-display: inline-block;
-border-radius: 50%;
-background: red;
-width: 17px;
-height: 17px;
-
+#contact{
+    width: 100%;
+    background-color: teal;
+    color: black;
+}
+#contact a{
+    background-color: teal;
+    color: black;
+}
+.contact-value{
+    padding-left: 1rem;
+    color: black;
 }
 
 .experience-type{
-    color: red;
+    color: teal;
     opacity: 0.9;
 }
 .experience-institution, .experience-date-separator{
-    color: red;
+    color: teal;
     opacity: 0.7;
 }
 
@@ -82,15 +76,16 @@ height: 17px;
 }
 .experience-institution::before{
     content: "@";
-    color: red;
+    color: black;
     opacity: 0.7;
 }
 
 
 #about > h3, #competencies >h3, #experiences > h3, #education > h3, #hobbies > h3{
+    width: 150px;
     padding-bottom: 1rem;
     border-bottom: 1px solid lightgray;
-    width: 100%;
+   
     
 }
 
@@ -105,14 +100,14 @@ height: 17px;
     margin-bottom: 1rem;
 }
 .skill {
-    background-color: gray;
+    background-color: teal;
     margin: 0.2rem;
 
 }
 [data-skill="5"]  span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 50%;
     color: white;
     
@@ -122,7 +117,7 @@ height: 17px;
 [data-skill="3"] span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 30%;
     color: white;
 
@@ -130,14 +125,14 @@ height: 17px;
 [data-skill="1"] span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 10%;
     color: white;
 }
 [data-skill="9"] span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 90%;
     color: white;
     
@@ -146,7 +141,7 @@ height: 17px;
 [data-skill="5"] span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 50%;
     color: white;
 
@@ -154,15 +149,13 @@ height: 17px;
 [data-skill="7"] span{
     margin: 3px 3px 3px 3px;
     display: inline-block;
-    background-color: red;
+    background-color: rgb(92, 78, 78);
     width: 70%;
     color: white;
 }
 
 
-.skills-secondary span{
-    opacity: 0.6;
-}
+
 
 
 
